--- a/AIRBNB_new.ipynb
+++ b/AIRBNB_new.ipynb
@@ -40,6 +40,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### **GitHub Link** -\n",
+        "https://github.com/hansatammineedi/AIRBNB_CAPSTONE"
+      ],
+      "metadata": {
+        "id": "Y_weJPuFsXa2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#*Know Your Data*#"
       ],
       "metadata": {
